# otogi_cq

./: .gitignore  README.md  cleaner.ipynb  cq_ocr.ipynb  gcq.pth  gcq_cnn.ipynb  gcq_ocr.ipynb  gcq_test.ipynb  gcq_train.ipynb  gcq_use.ipynb  main.py  pyproject.toml
